Pokentiworked into Nil
manual

--- a/PokeEnti/PokeEnti.vcxproj
+++ b/PokeEnti/PokeEnti.vcxproj
@@ -134,6 +134,7 @@
     <ClInclude Include="Map.h" />
     <ClInclude Include="Menus and Screens.h" />
     <ClInclude Include="Move.h" />
+    <ClInclude Include="Pokemon.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
