--- a/PokeEnti/PokeEnti.vcxproj.filters
+++ b/PokeEnti/PokeEnti.vcxproj.filters
@@ -29,5 +29,11 @@
     <ClInclude Include="Move.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="Menus and Screens.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Pokemon.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
